--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-    --sec-bg-color: rgb(53, 51, 51);
+    --main-text-color: rgb(53, 51, 51);
 }
 
 * {
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: var(--sec-bg-color);
+    background-color: var(--main-text-color);
     color: white;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -76,7 +76,7 @@ main {
 
                     #first {
                         background-color: var(--main-bg-color);
-                        color: var(--sec-bg-color);
+                        color: var(--main-text-color);
                         box-shadow: 0 0 20px var(--main-bg-color);
                     }
                 }
@@ -125,7 +125,7 @@ main {
                     background-color: var(--main-bg-color);
                     padding: 10px;
                     border-radius: 7px;
-                    color: var(--sec-bg-color);
+                    color: var(--main-text-color);
                     font-size: 18px;
                     transition: 0.5s;
                     box-shadow: 0 0 20px var(--main-bg-color);
@@ -133,7 +133,7 @@ main {
 
                 .gitHub:hover,
                 .resume:hover {
-                    background-color: var(--sec-bg-color);
+                    background-color: var(--main-text-color);
                     color: var(--mian-bg-color);
                 }
             }
@@ -155,7 +155,81 @@ main {
     }
 
     .about {
-        height: 100vh;
+        min-height: 100vh;
+
+        h1 {
+            margin-top: 10px;
+        }
+
+        .about-info {
+            height: calc(100% - 40px);
+            display: flex;
+            transition: 0.5s;
+
+            .details {
+                /* background-color: green; */
+                width: 50%;
+
+                h2 {
+                    /* background-color: red; */
+                    background-color: var(--main-bg-color);
+                    color: var(--main-text-color);
+                    padding: 7px;
+                    text-align: center;
+                    border: 2px black solid;
+                    border-radius: 10px;
+                    box-shadow: 0 0 15px inset deepskyblue;
+                    margin: 20px 0;
+                }
+
+                p {
+                    text-align: justify;
+                    font-size: 18px;
+                }
+
+                .about-more {
+
+                    .about-more-btn,
+                    .hire-me {
+                        display: inline-block;
+                        border: 2px solid yellow;
+                        margin: 40px 15px;
+                        background-color: var(--main-bg-color);
+                        padding: 10px;
+                        border-radius: 7px;
+                        color: var(--main-text-color);
+                        font-size: 18px;
+                        transition: 0.5s;
+                        box-shadow: 0 0 20px var(--main-bg-color);
+                    }
+
+                    .about-more-btn:hover {
+                        background-color: var(--main-text-color);
+                        color: var(--mian-bg-color);
+                    }
+
+                    .hire-me:hover {
+                        background-color: var(--main-text-color);
+                        color: var(--mian-bg-color);
+                    }
+                }
+            }
+
+            .my-pic {
+                /* background-color: pink; */
+                width: 50%;
+                align-content: center;
+                text-align: center;
+
+                img {
+                    height: 330px;
+                    border: 7px var(--main-bg-color) solid;
+                    border-radius: 100%;
+                    box-shadow: 0 0 100px yellowgreen;
+                }
+            }
+        }
+
     }
 
     .projects {
@@ -200,7 +274,7 @@ main {
                         position: absolute;
                         align-content: center;
                         text-align: center;
-                        color: var(--sec-bg-color);
+                        color: var(--main-text-color);
                         border-radius: inherit;
                         background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 15%, yellow 100%);
                         left: 0;
@@ -234,6 +308,261 @@ main {
                 }
             }
         }
+    }
+
+    .skills {
+        /* background-color: red; */
+        min-height: 100vh;
+
+        h1 {
+            padding: 20px 0;
+        }
+
+        .content {
+            /* background-color: green; */
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+
+            .technical-skills {
+                width: 48%;
+
+                h2 {
+                    margin: 20px 0;
+                    background-color: var(--main-bg-color);
+                    text-align: center;
+                    padding: 10px;
+                    color: var(--main-text-color);
+                    border: 2px black solid;
+                    border-radius: 10px;
+                    box-shadow: 0 0 15px inset deepskyblue;
+                }
+
+                .language {
+                    display: flex;
+                    flex-direction: column;
+
+                    .lang {
+                        /* background-color: pink; */
+                        height: 50px;
+                        margin: 10px 0;
+                        display: flex;
+                        justify-content: space-around;
+                        align-items: center;
+
+                        i {
+                            font-size: 24px;
+                            Color: #f06529;
+                        }
+
+                        .perce-line {
+                            background-color: black;
+                            width: 80%;
+                            height: 10px;
+                            border-radius: 10px;
+                            cursor: pointer;
+
+                            .perce {
+                                background-color: var(--main-bg-color);
+                                height: inherit;
+                                width: 90%;
+                                border-radius: inherit;
+                                box-shadow: 0 0 10px var(--main-bg-color);
+                            }
+                        }
+                    }
+
+                    .css {
+                        i {
+                            color: #2965f1;
+                        }
+
+                        .perce-line {
+                            .perce {
+                                background-color: var(--main-bg-color);
+                                width: 60%;
+                            }
+                        }
+                    }
+
+                    .js {
+                        i {
+                            color: var(--main-bg-color);
+                        }
+
+                        .perce-line {
+                            .perce {
+                                background-color: var(--main-bg-color);
+                                width: 70%;
+                            }
+                        }
+                    }
+
+                    .python {
+                        i {
+                            color: #4584b6;
+                        }
+
+                        .perce-line {
+                            .perce {
+                                background-color: var(--main-bg-color);
+                                width: 60%;
+                            }
+                        }
+                    }
+
+                    .c {
+                        i {
+                            color: #283593;
+                        }
+
+                        .perce-line {
+                            .perce {
+                                background-color: var(--main-bg-color);
+                                width: 95%;
+                            }
+                        }
+                    }
+
+                    .django {
+                        i {
+                            color: #00549D;
+                        }
+
+                        .perce-line {
+                            .perce {
+                                background-color: var(--main-bg-color);
+                                width: 50%;
+                            }
+                        }
+                    }
+
+                    .cpp {
+                        i {
+                            color: #00549D;
+                        }
+
+                        .perce-line {
+                            .perce {
+                                background-color: var(--main-bg-color);
+                                width: 85%;
+                            }
+                        }
+                    }
+
+                    .dsa {
+                        i {
+                            color: #00549D;
+                        }
+
+                        .perce-line {
+                            .perce {
+                                background-color: var(--main-bg-color);
+                                width: 80%;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .professional-skills {
+                width: 48%;
+
+                h2 {
+                    margin: 20px 0;
+                    background-color: var(--main-bg-color);
+                    text-align: center;
+                    padding: 10px;
+                    color: var(--main-text-color);
+                    border: 2px black solid;
+                    border-radius: 10px;
+                    box-shadow: 0 0 15px inset deepskyblue;
+                }
+
+                .content {
+                    display: flex;
+                    gap: 50px;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin: 50px 0;
+                    flex-direction: row;
+                    justify-content: space-around;
+                    flex-wrap: wrap;
+
+                    .pro-skill {
+                        /* background-color: red; */
+                        position: relative;
+                        width: 140px;
+                        height: 140px;
+                    }
+
+                    .pro-skill svg {
+                        transform: rotate(-90deg);
+                    }
+
+                    .pro-skill circle {
+                        fill: none;
+                        stroke-width: 10;
+                        r: 60;
+                        cx: 70;
+                        cy: 70;
+                    }
+
+                    .pro-skill .bg {
+                        stroke: black;
+                    }
+
+                    .pro-skill .progress {
+                        stroke: var(--main-bg-color);
+                        stroke-dasharray: 377;
+                        stroke-dashoffset: calc(377 - (377 * var(--percent) / 100));
+                        transition: stroke-dashoffset 1s;
+                        cursor: pointer;
+                    }
+
+                    .pro-skill .percent-text {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        font-size: 20px;
+                        font-weight: bold;
+                        color: white;
+                        font-family: Arial, sans-serif;
+                    }
+
+                    .pro-skill .skill-name {
+                        position: absolute;
+                        top: calc(100% + 10px);
+                        left: 50%;
+                        transform: translateX(-50%);
+                        font-size: 16px;
+                        color: white;
+                        font-family: Arial, sans-serif;
+                    }
+
+                    .creativity {
+                        --percent: 90;
+                    }
+
+                    .communication {
+                        --percent: 70;
+                    }
+
+                    .problem-solving {
+                        --percent: 85;
+                    }
+
+                    .teamwork {
+                        --percent: 80;
+                    }
+                }
+            }
+        }
+    }
+
+    .services{
+        background-color: red;
     }
 
     .contact {
@@ -317,14 +646,14 @@ main {
                 button {
                     cursor: pointer;
                     background-color: var(--main-bg-color);
-                    color: var(--sec-bg-color);
+                    color: var(--main-text-color);
                     box-shadow: 0 0 20px var(--main-bg-color);
                     transition: 0.5s;
                     font-weight: 900;
                 }
 
                 button:hover {
-                    background-color: var(--sec-bg-color);
+                    background-color: var(--main-text-color);
                     color: white;
                 }
             }
@@ -333,23 +662,9 @@ main {
 }
 
 @media screen and (max-width:1000px) {
+
     main {
         width: 95%;
-
-        .home {
-            display: flex;
-            flex-direction: column;
-
-            .name-info {
-                height: 50%;
-                width: 100%;
-            }
-
-            .my-pic {
-                height: 50%;
-                width: 100%;
-            }
-        }
 
         header {
             .menu-btn {
@@ -376,20 +691,71 @@ main {
             }
         }
 
-        .contact {
-            .content {
-                /* justify-content: space-around; */
-                flex-direction: column;
+        .home {
+            display: flex;
+            flex-direction: column;
 
-                .social {
-                    width: 100%;
-                }
-
-                .form {
-                    width: 100%;
-                }
-
+            .name-info {
+                height: 50%;
+                width: 100%;
             }
+
+            .my-pic {
+                height: 50%;
+                width: 100%;
+            }
+        }
+
+        .about {
+            .about-info {
+                display: flex;
+                flex-direction: column-reverse;
+
+                .details {
+                    width: 100%;
+                }
+
+                .my-pic {
+                    width: 100%;
+                }
+            }
+
+        }
+    }
+
+    .skills {
+
+        .content {
+            display: flex;
+            flex-direction: column;
+
+            .technical-skills {
+                /* background-color: red; */
+                min-width: 100%;
+            }
+
+            .professional-skills {
+                /* background-color: pink; */
+                min-width: 100%;
+            }
+        }
+    }
+
+    .contact {
+        .content {
+            /* justify-content: space-around; */
+            flex-direction: column;
+            /* background-color: green; */
+
+            .social {
+                /* background-color: red; */
+                min-width: 100%;
+            }
+
+            .form {
+                min-width: 100%;
+            }
+
         }
     }
 }
@@ -410,4 +776,17 @@ main {
 
 .show {
     display: block;
+}
+
+.up-arrow{
+    background-color: var(--main-bg-color);
+    color: var(--main-text-color);
+    font-size: 40px;
+    position: fixed;
+    display: inline-block;
+    bottom: 10px;
+    padding: 0 7px;
+    border: 1px black solid;
+    border-radius: 7px;
+    right: 10px;
 }
